2004-11-21  Daniel Jacobowitz  <dan@debian.org>

	* valarith.c (value_subscript): Copy VALUE_FRAME_ID.
	(value_subscripted_rvalue): Likewise.
	* valops.c (search_struct_field, value_slice): Likewise.

2004-11-21  Mark Kettenis  <kettenis@gnu.org>

	* inf-ptrace.c: Don't include "regcache.h" and "gdbcmd.h".
	Reorder includes a bit.  Fix comment.
	* Makefile.in (inf-ptrace.o): Update dependencies.

2004-11-21  Andreas Schwab  <schwab@suse.de>

	* m68klinux-tdep.c: Include "glibc-tdep.h" and "solib-svr4.h".
	(m68k_linux_init_abi): Set solib_svr4_fetch_link_map_offsets to
	svr4_ilp32_fetch_link_map_offsets and gdbarch_skip_solib_resolver
	to glibc_skip_solib_resolver.
	* config/m68k/linux.mt (TDEPFILES): Add glibc-tdep.o.  Remove
	solib-legacy.o.
	* Makefile.in (m68klinux-tdep.o): Update dependencies.

2004-11-20  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	* infttrace.h (ttrace_write_reg_64): Add prototype.
	* hppah-nat.c (store_inferior_registers): Fix warning from ambiguous
	expression.  
	(store_inferior_registers): Correct formatting.  Replace uses of
	deprecated_registers with calls to regcache_raw_read,
	regcache_raw_write_part and regcache_raw_read_part.

2004-11-21  Mark Kettenis  <kettenis@gnu.org>

	* config/pa/hppahpux.mh: Remove file.
	* config/pa/hpux1020.mh: Remove file.

2004-11-20  Andreas Schwab  <schwab@suse.de>

	* configure.host: Set host floatformat for m68k.

2004-11-20  Eli Zaretskii  <eliz@gnu.org>

	* config/djgpp/fnchange.lst: Resolve file-name clash between
	hppa-hpux-tdep.c and the new hppa-hpux-nat.c.

2004-11-20  Mark Kettenis  <kettenis@gnu.org>

	* hppa-hpux-nat.c: New file.
	* config/pa/hpux.mh (NATDEPFILES): New file.
	* Makefile.in (ALLDEPFILES): Add hppa-hpux-nat.c.
	(hppa-hpux-nat.o): New dependency.
	* configure.host: Remove hppa*-*-hpux10.20.
	(hppa*-*-hpux*, hppa*-*-hiux*): Set gdb_host to hpux.mh.

	* inf-ptrace.c: Fix coding style.

	* gdb_ptrace.h [PTRACE_TYPE_ARG5] (ptrace): New macro.